# kaito

./: Cargo.toml
kaito/: Cargo.toml
kaito-backends/: Cargo.toml
kaito-backends/src/: lib.rs
kaito-backends/src/msdos/: mod.rs
kaito-interfaces/: Cargo.toml
kaito-interfaces/src/: lib.rs
kaito/src/: main.rs
patterns/: psp.hexpat
src/: main.rs  msdos.rs
